Problem paulin + try fix safari overflow hidden issue

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -18,6 +18,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   background-color: var(--background);
   color: var(--font-color);
+  position: relative;
   overflow-x: hidden;
 }
 
