--- a/src/pages/Player/Player.module.css
+++ b/src/pages/Player/Player.module.css
@@ -22,6 +22,10 @@
     justify-content: space-around;
 }
 
+.titles a {
+    display: block;
+}
+
 .songTitle{
     font-weight: bold;
     font-size: 25pt;
